--- a/meli-challenge-app/package.json
+++ b/meli-challenge-app/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.24",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "meli-challenge-models": "file:../meli-challenge-models",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "meli-challenge-models": "file:../meli-challenge-models"
+    "typescript": "^4.1.3",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "npm run update-models-windows && react-scripts start",
@@ -38,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
