--- a/meli-challenge-api/package.json
+++ b/meli-challenge-api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "meli-challenge-models": "file:../meli-challenge-models",
