--- a/meli-challenge-app/package.json
+++ b/meli-challenge-app/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^14.14.24",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "meli-challenge-models": "file:../meli-challenge-models",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
@@ -25,7 +27,7 @@
     "eject": "npm run update-models-windows && react-scripts eject",
     "update-models-start": "npm run update-models-windows && react-scripts start",
     "update-models-mac": "rm -rf node_module\\meli-challenge-models && npm install",
-    "update-models-windows": "rmdir /S /Q node_modules\\meli-challenge-models && npm install"
+    "update-models-windows": "cmd /c rmdir node_modules\\meli-challenge-models /s /q && npm i || npm i"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +47,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7"
+  }
 }
