--- a/meli-challenge-app/package.json
+++ b/meli-challenge-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "meli-challenge-models": "file:../meli-challenge-models",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
@@ -21,7 +22,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start ",
     "build": "npm run update-models-windows && react-scripts build",
     "test": "npm run update-models-windows && react-scripts test",
     "eject": "npm run update-models-windows && react-scripts eject",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.0.1",
     "@types/react-router-dom": "^5.1.7"
   }
 }
