CHORE: app public folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ dist
 meli-challenge-models/src/item-feed.js
 /meli-challenge-models/src/price.js
 /meli-challenge-models/src/item-feed.js
+/meli-challenge-app/public
