--- a/meli-challenge-api/package.json
+++ b/meli-challenge-api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run update-models-windows && tsc && ts-node index.ts",
+    "start": "npm run update-models-windows && tsc && node index.js",
+    "dev": "npm run update-models-windows && ts-node index.ts",
     "start-mac": "npm run update-models-mac && tsc && node index.js",
     "update-models-mac": "rm -rf node_module\\meli-challenge-models && npm install",
     "update-models-windows": "rmdir /S /Q node_modules\\meli-challenge-models && npm install",
